WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97515
SerializedScriptValue isn't aware of indexed storage, but should be
https://bugs.webkit.org/show_bug.cgi?id=97515
Summary
SerializedScriptValue isn't aware of indexed storage, but should be
Filip Pizlo
Reported
2012-09-24 20:59:54 PDT
It calls putDirect() when it means to call putDirectMayBeIndex().
Attachments
patch
(4.67 KB, patch)
2012-09-24 21:02 PDT
,
Filip Pizlo
sam
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(6.33 KB, patch)
2012-09-24 21:52 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-09-24 21:02:30 PDT
Created
attachment 165509
[details]
patch Haven't yet done the Windows build foo. Also the expected file isn't done getting computed.
Build Bot
Comment 2
2012-09-24 21:45:40 PDT
Comment on
attachment 165509
[details]
patch
Attachment 165509
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/13991936
Filip Pizlo
Comment 3
2012-09-24 21:52:00 PDT
Created
attachment 165519
[details]
patch for landing
Filip Pizlo
Comment 4
2012-09-24 22:27:28 PDT
Landed in
http://trac.webkit.org/changeset/129457
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug