SerializedScriptValue isn't aware of indexed storage, but should be https://bugs.webkit.org/show_bug.cgi?id=97515 <rdar://problem/12361874>

Reviewed by Sam Weinig.

Source/JavaScriptCore:

Export a method that WebCore now uses.

* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
* runtime/JSObject.h:
(JSObject):

Source/WebCore:

New test: fast/js/post-message-numeric-property.html

* bindings/js/SerializedScriptValue.cpp:
(WebCore::CloneDeserializer::putProperty):

LayoutTests:

* fast/js/post-message-numeric-property-expected.txt: Added.
* fast/js/post-message-numeric-property.html: Added.
* fast/js/script-tests/post-message-numeric-property.js: Added.
(window.onmessage):



Canonical link: https://commits.webkit.org/115478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129457 268f45cc-cd09-0410-ab3c-d52691b4dbfc